--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <title>Project 1</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    <!-- Google materials -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=folder_open" />
 </head>
 <body>
+
+    <!-- Hero Section -->
     <section class="section__color">
         <div class="container">
             <div class="intro">
@@ -21,5 +25,119 @@
             </div>
         </div>
     </section>
+
+    <!-- Card Section -->
+     <section>
+        <div class="container grid__cards">
+            <div class="cards">
+                <div class="card__header">
+                    <img src="./assets/1.jpg" alt="">
+                </div>
+                <div class="card__body">
+                    <h2>Card 1</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur 
+                        adipisicing elit. Quos, repudiandae?
+                    </p>
+                    <button class="button__unfill">Read more</button>
+                </div>
+            </div>
+            <div class="cards">
+                <div class="card__header">
+                    <img src="./assets/2.jpg" alt="">
+                </div>
+                <div class="card__body">
+                    <h2>Card 2</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur 
+                        adipisicing elit. Quos, repudiandae?
+                    </p>
+                    <button class="button__unfill">Read more</button>
+                </div>
+            </div>
+            <div class="cards">
+                <div class="card__header">
+                    <img src="./assets/3.jpg" alt="">
+                </div>
+                <div class="card__body">
+                    <h2>Card 3</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur 
+                        adipisicing elit. Quos, repudiandae?
+                    </p>
+                    <button class="button__unfill">Read more</button>
+                </div>
+            </div>
+            <div class="cards">
+                <div class="card__header">
+                    <img src="./assets/4.jpg" alt="">
+                </div>
+                <div class="card__body">
+                    <h2>Card 4</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur 
+                        adipisicing elit. Quos, repudiandae?
+                    </p>
+                    <button class="button__unfill">Read more</button>
+                </div>
+            </div>
+            <div class="cards">
+                <div class="card__header">
+                    <img src="./assets/5.jpg" alt="">
+                </div>
+                <div class="card__body">
+                    <h2>Card 5</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur 
+                        adipisicing elit. Quos, repudiandae?
+                    </p>
+                    <button class="button__unfill">Read more</button>
+                </div>
+            </div>
+            <div class="cards">
+                <div class="card__header">
+                    <img src="./assets/6.jpg" alt="">
+                </div>
+                <div class="card__body">
+                    <h2>Card 6</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur 
+                        adipisicing elit. Quos, repudiandae?
+                    </p>
+                    <button class="button__unfill">Read more</button>
+                </div>
+            </div>
+            <div class="cards">
+                <div class="card__header">
+                    <img src="./assets/7.jpg" alt="">
+                </div>
+                <div class="card__body">
+                    <h2>Card 7</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur 
+                        adipisicing elit. Quos, repudiandae?
+                    </p>
+                    <button class="button__unfill">Read more</button>
+                </div>
+            </div>
+            <div class="cards">
+                <div class="card__header">
+                    <img src="./assets/8.jpg" alt="">
+                </div>
+                <div class="card__body">
+                    <h2>Card 8</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur 
+                        adipisicing elit. Quos, repudiandae?
+                    </p>
+                    <button class="button__unfill">Read more</button>
+                </div>
+            </div>
+            <div class="cards">
+                <div class="card__header">
+                    <img src="./assets/9.jpg" alt="">
+                </div>
+                <div class="card__body">
+                    <h2>Card 9</h2>
+                    <p>Lorem ipsum dolor, sit amet consectetur 
+                        adipisicing elit. Quos, repudiandae?
+                    </p>
+                    <button class="button__unfill">Read more</button>
+                </div>
+            </div>
+        </div>
+     </section>
 </body>
 </html>
