new Section added

--- a/index.html
+++ b/index.html
@@ -139,5 +139,16 @@
             </div>
         </div>
      </section>
+
+    <section class="fixed__background">
+        <div class="container fixed__background__container">
+            <h2>Lorem ipsum dolor sit amet.</h2>
+            <span></span>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit porro error 
+                repellendus adipisci, nisi voluptates ipsa fuga magnam, ut numquam possimus 
+                quasi rem praesentium, placeat laboriosam. Nam voluptas adipisci tempora!
+            </p>
+        </div>
+    </section>
 </body>
 </html>
