Contact form added

--- a/index.html
+++ b/index.html
@@ -150,5 +150,38 @@
             </p>
         </div>
     </section>
+
+    <section class="contact_section">
+        <div class="container contact__container">
+            <div class="contact__details">
+                <p>
+                    <b>Address:</b><br>
+                    <span>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                        Facilis minus, maiores ipsum tempora rem ab!
+                    </span>
+                </p>
+                <p>
+                    <b>Email:</b><br>
+                    <span><a href="mail:example@gmail.com">example@gmail</a></span>
+                </p>
+                <p>
+                    <b>Phone Number:</b><br>
+                    <span><a href="te:1234567890">1234567890</a></span>
+                </p>
+            </div>
+            <div>
+                <form action="" class="contact__form">
+                    <label for="name">Name</label>
+                    <input type="text" name="name" id="" placeholder="John" required>
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="" placeholder="John@gmail.com" required>
+                    <label for="phoneNumber">Phone number</label>
+                    <input type="text" name="phoneNumber" id="" placeholder="1234567890">
+                    <button class="button__fill">Send</button>
+                </form>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
