contact section update

--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
                 </p>
                 <p>
                     <b>Email:</b><br>
-                    <span><a href="mail:example@gmail.com">example@gmail</a></span>
+                    <span><a href="email:example@gmail.com">example@gmail</a></span>
                 </p>
                 <p>
                     <b>Phone Number:</b><br>
-                    <span><a href="te:1234567890">1234567890</a></span>
+                    <span><a href="tel:1234567890">1234567890</a></span>
                 </p>
             </div>
             <div>
