--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 </p>
                 <p>
                     <b>Email:</b><br>
-                    <span><a href="email:example@gmail.com">example@gmail</a></span>
+                    <span><a href="mailto:example@gmail.com">example@gmail</a></span>
                 </p>
                 <p>
                     <b>Phone Number:</b><br>
