Hero Section Image added

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
     <!-- Hero Section -->
     <section class="section__color">
-        <div class="container">
-            <div class="intro">
+        <div class="container hero__container">
+            <div class="hero__text">
                 <h1>Responsive layouts don't have to be a struggle</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     A, in! Quis excepturi expedita adipisci minima? Eaque qui 
@@ -22,6 +22,9 @@
                     Corrupti ipsa eveniet voluptate dolores vitae.
                 </p>
                 <button class="button__fill">I want to learn</button>
+            </div>
+            <div class="hero__image">
+                <img src="./assets/10.jpg" alt="">
             </div>
         </div>
     </section>
