Quality Design Section Added

--- a/index.html
+++ b/index.html
@@ -153,7 +153,31 @@
             </p>
         </div>
     </section>
-
+<!--===================Quality design section ===================== -->
+ <section>
+    <div class="container quality_design">
+        <div class="quality_design_left">
+            <h2>Quality designs made custom, on demand, just for you</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi ea veritatis laborum molestiae eligendi quam excepturi autem aspernatur adipisci ullam. Ex necessitatibus quaerat excepturi, ipsam consequuntur fugiat harum iusto. Recusandae!</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet saepe porro, voluptates dolore placeat perferendis doloremque sit quasi nemo dicta?</p>
+        </div>
+        <div class="quality_design_right">
+            <div class="quality_design_small_card">
+                <h2>Cheap</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis possimus rem non voluptatem dolorem iste!</p>
+            </div>
+            <div class="quality_design_small_card">
+                <h2>Quick</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis possimus rem non voluptatem dolorem iste!</p>
+            </div>
+            <div class="quality_design_small_card">
+                <h2>Quality</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis possimus rem non voluptatem dolorem iste!</p>
+            </div>
+        </div>
+    </div>
+ </section>
+<!-- contact form -->
     <section class="contact_section">
         <div class="container contact__container">
             <div class="contact__details">
