Some section added

--- a/index.html
+++ b/index.html
@@ -177,6 +177,49 @@
         </div>
     </div>
  </section>
+ <!-- two column section -->
+    <section class="yellow-section">
+        <div class="container fixed__background__container yellow-section-container">
+            <p>Lorem ipsum dolor sit amet.</p>
+            <h2>Responsive layouts don't <br> have to be a struggle</h2>
+        </div>
+    </section>
+
+    <section class="quality-design">
+        <h2>Quality Designs</h2>
+        <div class="container section-row">
+            <div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos dolorem deserunt consequuntur sapiente accusamus ea deleniti, nam nostrum possimus repellendus voluptatem quidem, sit libero iure fuga sed beatae! Aspernatur, saepe.</p>
+            </div>
+            <div>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit nemo reprehenderit hic nostrum tempora quam, nam dolore dolores iure veniam velit provident eaque laborum officiis error perferendis blanditiis modi et?</p>
+            </div>
+        </div>
+      </section>
+
+
+  <section class="black-section">
+    <div class="container section-row">
+        <div>
+            <h2>Lorem ipsum dolor sit amet.</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos dolorem deserunt consequuntur sapiente accusamus ea deleniti, nam nostrum possimus repellendus voluptatem quidem, sit libero iure fuga sed beatae! Aspernatur, saepe.</p>
+        </div>
+        <div>
+            <img src="./assets/11.jpg" alt="">
+        </div>
+    </div>
+  </section>
+  <section class="brown-section">
+    <div class="container section-row row-reverse">
+        <div>
+            <h2>Lorem ipsum dolor sit amet.</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et fuga recusandae delectus ex omnis corrupti aperiam architecto corporis dolor ea rem, molestias error. Tempora tempore deleniti minima quod eos nesciunt.</p>
+        </div>
+        <div>
+            <img src="./assets/12.jpg" alt="">
+        </div>
+    </div>
+  </section>
 <!-- contact form -->
     <section class="contact_section">
         <div class="container contact__container">
